--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
 
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <p>Hello World, we are software developers!</p>
-    <script  src="js/index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <nav id="navbar">
+    <ul>
+      <li><a href="">About</a></li>
+      <li><a href="">Work</a></li>
+      <li><a href="">Contact</a></li>
+    </ul>
+  </nav>
+  <section id="welcome-section">
+    <h1>Hello World, We are Software Developers</h1>
+  </section>
+  <section id="projects">
+    <h2>These are our projects</h2>
+    <div class="project-title">
+      <a href=""></a>
+
+    </div>
+    <div class="project-title">
+      <a href=""></a>
+
+
+    </div>
+    <div class="project-title">
+      <a href=""></a>
+
+    </div>
+    <div class="project-title">
+      <a href=""></a>
+
+    </div>
+    <div class="project-title">
+      <a href=""></a>
+
+    </div>
+    <div class="project-title">
+      <a href=""></a>
+
+    </div>
+  </section>
+
+  <section id="contact">
+    <div>
+      <h1>Let's work together</h1>
+      <p>How to connect with us</p>
+    </div>
+    <div>
+      <a href="">Facebook</a>
+      <a href="">Twitter</a>
+      <a href="">GitHub</a>
+      <a href="">Call me</a>
+      <a href="">Send a mail</a>
+    </div>
+
+  </section>
+
+  <script src="js/index.js"></script>
+</body>
+
 </html>
