--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -16,39 +16,48 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <nav id="navbar">
     <ul>
-      <li><a href="">About</a></li>
-      <li><a href="">Work</a></li>
-      <li><a href="">Contact</a></li>
+     <li>
+       <a href="#about--link">About</a>
+
+     </li>
+     <li>
+       <a href="#work--link">Work</a>
+
+     </li>
+     <li>
+       <a href="#contact--link">Contact</a>
+
+     </li>
     </ul>
   </nav>
   <section id="welcome-section">
     <h1>Hello World, We are Software Developers</h1>
   </section>
   <section id="projects-container">
-    <h2>These are our projects</h2>
+    <h2 id="work--link">These are our projects</h2>
     <div id="projects">
-      <div class="project-title">
+      <div class="project-tile">
         <a href=""></a>
   
       </div>
-      <div class="project-title">
+      <div class="project-tile">
         <a href=""></a> 
   
   
       </div>
-      <div class="project-title">
+      <div class="project-tile">
         <a href=""></a>
   
       </div>
-      <div class="project-title">
+      <div class="project-tile">
         <a href=""></a>
   
       </div>
-      <div class="project-title">
+      <div class="project-tile">
         <a href=""></a>
   
       </div>
-      <div class="project-title">
+      <div class="project-tile">
         <a href=""></a>
   
       </div>
@@ -64,9 +73,9 @@
       <p>How to connect with us</p>
     </div>
     <div class="contacts">
-      <a href="">Facebook</a>
+      <a id="contact--link" href="">Facebook</a>
       <a href="">Twitter</a>
-      <a href="">GitHub</a>
+      <a id="profile-link" href="https://github.com/io-oseinana/microverse-project/tree/master/fcc-test-suite-template-master" target="_blank">GitHub</a>
       <a href="">Call me</a>
       <a href="">Send a mail</a>
     </div>
