--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -70,7 +70,7 @@
   <section id="contact">
     <div>
       <h1>Let's work together</h1>
-      <p>How to connect with us</p>
+      <p>How to connect with Us</p>
     </div>
     <div class="contacts">
       <a id="contact--link" href="">Facebook</a>
